# project-euler

./: .clang-format  .codecov.yml  .editorconfig  .gitignore  .lgtm.yml  .slather.yml  Brewfile  Brewfile.lock.json  CMakeLists.txt  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: clang-format.yml  tests.yml
Project Euler.xcodeproj/: project.pbxproj
Project Euler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
challenges/: ichallenge.hpp
challenges/c0001/: README.md  challenge.cpp  challenge.hpp
challenges/c0002/: README.md  challenge.cpp  challenge.hpp
challenges/c0003/: README.md  challenge.cpp  challenge.hpp
challenges/c0004/: challenge.cpp  challenge.hpp
challenges/c0005/: challenge.cpp  challenge.hpp
challenges/c0006/: README.md  challenge.cpp  challenge.hpp
challenges/c0007/: README.md  challenge.cpp  challenge.hpp
challenges/c0008/: README.md  challenge.cpp  challenge.hpp
challenges/c0009/: README.md  challenge.cpp  challenge.hpp
challenges/c0010/: README.md  challenge.cpp  challenge.hpp
challenges/c0011/: README.md  challenge.cpp  challenge.hpp
challenges/c0012/: README.md  challenge.cpp  challenge.hpp
challenges/c0013/: README.md  challenge.cpp  challenge.hpp
challenges/c0014/: README.md  challenge.cpp  challenge.hpp
tests/: CMakeLists.txt  Tests-Bridging-Header.h  TestsExtensions.swift  Utilities.swift
tests/benchmark/: CMakeLists.txt
tests/benchmark/challenges/: benchs_challenge_0001.cpp  benchs_challenge_0002.cpp  benchs_challenge_0003.cpp  benchs_challenge_0004.cpp  benchs_challenge_0005.cpp  benchs_challenge_0006.cpp  benchs_challenge_0007.cpp  benchs_challenge_0008.cpp  benchs_challenge_0009.cpp  benchs_challenge_0010.cpp  benchs_challenge_0011.cpp  benchs_challenge_0012.cpp  benchs_challenge_0013.cpp  benchs_challenge_0014.cpp  benchs_challenge_0015.cpp  benchs_challenge_0016.cpp  benchs_challenge_0017.cpp  benchs_challenge_0018.cpp  benchs_challenge_0019.cpp  benchs_challenge_0020.cpp  benchs_challenge_0021.cpp  benchs_challenge_0022.cpp  benchs_challenge_0023.cpp  benchs_challenge_0024.cpp  benchs_challenge_0025.cpp  benchs_challenge_0027.cpp  c0022_names.txt
tests/benchmark/tools/math/: benchs_factorial.cpp  benchs_factorization.cpp  benchs_number_properties.cpp
tests/benchmark/tools/math/sequences/: benchs_fibonacci.cpp
tests/benchmark/tools/types/: benchs_big_int.cpp
tests/unit/: CMakeLists.txt
tests/unit/challenges/: tests_challenge_0001.cpp  tests_challenge_0002.cpp  tests_challenge_0003.cpp  tests_challenge_0004.cpp  tests_challenge_0005.cpp  tests_challenge_0006.cpp  tests_challenge_0007.cpp  tests_challenge_0008.cpp  tests_challenge_0009.cpp  tests_challenge_0010.cpp  tests_challenge_0011.cpp  tests_challenge_0012.cpp  tests_challenge_0013.cpp  tests_challenge_0014.cpp  tests_challenge_0015.cpp  tests_challenge_0016.cpp  tests_challenge_0017.cpp  tests_challenge_0018.cpp  tests_challenge_0019.cpp  tests_challenge_0020.cpp  tests_challenge_0021.cpp  tests_challenge_0022.cpp  tests_challenge_0023.cpp  tests_challenge_0024.cpp  tests_challenge_0025.cpp  tests_challenge_0027.cpp
tests/unit/tools/math/: tests_factorial.cpp  tests_factorization.cpp  tests_number_properties.cpp
tests/unit/tools/math/sequences/: tests_fibonacci.cpp
tests/unit/tools/types/: tests_big_int.cpp  tests_named_number.cpp
(+186 files in other folders)
